/*package app.Adapter;

import net.sourceforge.barbecue.Barcode;

public interface BarcodeInterface {

    public Barcode generateBarcode(String filename);

}*/
